--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
                     <a class="link" href="#territory">Благоустройство</a>
                   </li>
                   <li class="header__menu-item">
-                    <a class="link" href="#">Примеры работ</a>
+                    <a class="link" href="#also">Сопутствующие товары</a>
+                  </li>
+                  <li class="header__menu-item">
+                    <a class="link" href="./gallery.html">Примеры работ</a>
                   </li>
                 </ul>
               </nav>
@@ -38,15 +41,15 @@
                 <span class="d-none d-xl-block"> +375 29 123 45 67 </span>
                 <svg
                   class="d-block d-xl-none"
-                  width="27"
-                  height="27"
-                  viewBox="0 0 27 27"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
                   <path
-                    d="M25.5398 4.41855L22.1077 0.989649C21.8656 0.746478 21.5778 0.553539 21.261 0.421915C20.9441 0.29029 20.6043 0.222574 20.2611 0.222656C19.5618 0.222656 18.9044 0.496582 18.4113 0.989649L14.7182 4.68281C14.475 4.92492 14.2821 5.21268 14.1504 5.52958C14.0188 5.84647 13.9511 6.18625 13.9512 6.52939C13.9512 7.22871 14.2251 7.88613 14.7182 8.3792L17.4188 11.0798C16.7866 12.4731 15.9077 13.7407 14.8245 14.8213C13.744 15.9071 12.4766 16.7892 11.083 17.4252L8.38242 14.7246C8.14032 14.4814 7.85255 14.2885 7.53566 14.1569C7.21876 14.0253 6.87898 13.9575 6.53584 13.9576C5.83653 13.9576 5.1791 14.2315 4.68604 14.7246L0.98965 18.4146C0.746181 18.6571 0.553076 18.9454 0.421446 19.2629C0.289815 19.5803 0.222257 19.9207 0.222658 20.2644C0.222658 20.9637 0.496584 21.6211 0.98965 22.1142L4.41533 25.5398C5.20166 26.3294 6.2877 26.7773 7.40274 26.7773C7.63799 26.7773 7.86358 26.758 8.08594 26.7193C12.4301 26.0039 16.7388 23.6933 20.216 20.2192C23.69 16.7484 25.9975 12.443 26.7226 8.08594C26.9417 6.75498 26.5002 5.38535 25.5398 4.41855Z"
-                    fill="#333333"
+                    d="M22.6 24C19.8222 24 17.0778 23.3947 14.3667 22.184C11.6556 20.9733 9.18889 19.2564 6.96667 17.0333C4.74445 14.8111 3.028 12.3444 1.81733 9.63333C0.606667 6.92222 0.000888889 4.17778 0 1.4C0 1 0.133333 0.666667 0.4 0.4C0.666667 0.133333 1 0 1.4 0H6.8C7.11111 0 7.38889 0.105778 7.63333 0.317333C7.87778 0.528889 8.02222 0.778667 8.06667 1.06667L8.93333 5.73333C8.97778 6.08889 8.96667 6.38889 8.9 6.63333C8.83333 6.87778 8.71111 7.08889 8.53333 7.26667L5.3 10.5333C5.74444 11.3556 6.272 12.1498 6.88267 12.916C7.49333 13.6822 8.16578 14.4213 8.9 15.1333C9.58889 15.8222 10.3111 16.4613 11.0667 17.0507C11.8222 17.64 12.6222 18.1787 13.4667 18.6667L16.6 15.5333C16.8 15.3333 17.0613 15.1836 17.384 15.084C17.7067 14.9844 18.0231 14.9564 18.3333 15L22.9333 15.9333C23.2444 16.0222 23.5 16.1836 23.7 16.4173C23.9 16.6511 24 16.912 24 17.2V22.6C24 23 23.8667 23.3333 23.6 23.6C23.3333 23.8667 23 24 22.6 24Z"
+                    fill="white"
                   />
                 </svg>
               </a>
@@ -56,27 +59,81 @@
         </div>
       </div>
     </header>
+    <div class="burger-menu">
+      <div class="burger-menu__info">
+        <a href="./index.html" class="burger-menu__logo">
+          <img src="./img/logo-black.png" alt="" />
+        </a>
+        <div class="burger-close"></div>
+      </div>
+
+      <ul class="burger-menu__list">
+        <li>
+          <a href="#plitka" class="burger-menu__link">Тротуарная плитка</a>
+        </li>
+        <li>
+          <a href="#territory" class="burger-menu__link">Благоустройство</a>
+        </li>
+        <li>
+          <a href="#also" class="burger-menu__link">Сопутствующие товары</a>
+        </li>
+        <li>
+          <a href="./gallery.html" class="burger-menu__link">Примеры работ</a>
+        </li>
+      </ul>
+      <div class="burger-menu__contact">
+        <div class="mt-3 burger-menu__wrap">
+          <h3>Контакты</h3>
+          <div class="burger-menu__wrap-elem">
+            <svg
+              width="18"
+              height="18"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M22.6 24C19.8222 24 17.0778 23.3947 14.3667 22.184C11.6556 20.9733 9.18889 19.2564 6.96667 17.0333C4.74445 14.8111 3.028 12.3444 1.81733 9.63333C0.606667 6.92222 0.000888889 4.17778 0 1.4C0 1 0.133333 0.666667 0.4 0.4C0.666667 0.133333 1 0 1.4 0H6.8C7.11111 0 7.38889 0.105778 7.63333 0.317333C7.87778 0.528889 8.02222 0.778667 8.06667 1.06667L8.93333 5.73333C8.97778 6.08889 8.96667 6.38889 8.9 6.63333C8.83333 6.87778 8.71111 7.08889 8.53333 7.26667L5.3 10.5333C5.74444 11.3556 6.272 12.1498 6.88267 12.916C7.49333 13.6822 8.16578 14.4213 8.9 15.1333C9.58889 15.8222 10.3111 16.4613 11.0667 17.0507C11.8222 17.64 12.6222 18.1787 13.4667 18.6667L16.6 15.5333C16.8 15.3333 17.0613 15.1836 17.384 15.084C17.7067 14.9844 18.0231 14.9564 18.3333 15L22.9333 15.9333C23.2444 16.0222 23.5 16.1836 23.7 16.4173C23.9 16.6511 24 16.912 24 17.2V22.6C24 23 23.8667 23.3333 23.6 23.6C23.3333 23.8667 23 24 22.6 24Z"
+                fill="#333333"
+              />
+            </svg>
+
+            <a href="tel:+375(29)500-08-60">+375(29)500-08-60</a>
+          </div>
+
+          <div class="burger-menu__wrap-elem">
+            адрес: Луговослободской сельсовет, д.Заболотье, Минский
+            район,Беларусь
+          </div>
+        </div>
+        <h3>Время работа</h3>
+        <div class="burger-menu__wrap">
+          <div>пн.-пт. с 8:00 до 17:00</div>
+          <div>сб.-вс. по согласованию</div>
+        </div>
+      </div>
+    </div>
     <section class="banner">
       <div class="banner__content">
         <div class="container">
-          <div class="row justify-content-between gy-2">
+          <div class="row justify-content-between gy-3">
             <div class="col-12 col-lg-5">
               <h1>Тротуарная плитка от производителя</h1>
             </div>
-            <div class="d-none d-lg-block col-lg-1">
+            <div class="col-lg-1">
               <div class="line"></div>
             </div>
             <div class="col-12 col-lg-5">
               <h2>Благоустройство придомовой территории под ключ</h2>
             </div>
           </div>
-          <button class="mt-5 button button-primary">Оставить заявку</button>
+          <button class="mt-4 button button-primary">Оставить заявку</button>
         </div>
       </div>
     </section>
     <section class="preferences">
       <div class="container">
-        <h2>Собственное производство плитки!</h2>
+        <h2>Наши преимущества</h2>
         <p class="mt-4">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum has been the industry's standard dummy text ever
@@ -280,7 +337,7 @@
     <section class="product">
       <div class="container">
         <h2 id="plitka">Тротуарная плитка</h2>
-        <div class="row mt-3 gy-5 gx-0 gx-sm-4 gx-md-5">
+        <div class="row mt-3 gy-5 gx-0 gx-sm-4">
           <div class="col-12 col-sm-6 col-xl-4">
             <div class="product__item">
               <div class="product__img">
@@ -543,7 +600,11 @@
                 </div>
                 <div class="col-6 col-sm-8 col-md-6 col-lg-9">17.5 руб</div>
               </div>
-              <button class="button button-primary mt-4">Заказать</button>
+              <p class="mt-3 constructor__dop">
+                Также у нас Вы можете приобрести: цемент,песок в мешках,
+                гидрофобизатоп
+              </p>
+              <button class="button button-primary mt-2">Заказать</button>
             </div>
           </div>
         </div>
@@ -651,6 +712,55 @@
               alt="Благоустройство придомовой территории"
               class="territory__img"
             />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="also">
+      <div class="container">
+        <h2 id="also">Также у нас Вы можете приобрести</h2>
+        <p class="mt-4 also__about">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book.
+        </p>
+        <div class="row mt-3 gy-5 gx-0 gx-sm-4">
+          <div class="col-12 col-sm-6 col-xl-4">
+            <div class="product__item">
+              <div class="product__img">
+                <img src="./img/also/1.jpg" alt="" />
+              </div>
+              <h3 class="product__title">Цемент</h3>
+              <p class="product__text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-xl-4">
+            <div class="product__item">
+              <div class="product__img">
+                <img src="./img/also/1.png" alt="" />
+              </div>
+              <h3 class="product__title">Песок в мешках</h3>
+              <p class="product__text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-xl-4">
+            <div class="product__item">
+              <div class="product__img">
+                <img src="./img/also/2.png" alt="" />
+              </div>
+              <h3 class="product__title">Гидрофобизатоп</h3>
+              <p class="product__text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -833,6 +943,7 @@
         </div>
       </div>
     </footer>
+    <div class="background"></div>
     <script src="./script/burger.js"></script>
     <script src="./script/main.js"></script>
     <script src="./script/constructor.js"></script>
